packages/docs/versioned_docs/version-1.1.0/api/ConveyerOptions.mdx
---
custom_edit_url: null
---

<div>

</div>

**Type**: TSInterface

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|horizontal|boolean|<p>scroll direction. (true: Horizontal Scroll, false: Vertical Scroll)  (default: true) </p>|
|itemSelector|string|<p>selector to find items inside. (default: &quot;&quot;) </p>|
|useDrag|boolean|<p>Whether to use drag (default: true) </p>|
|scrollDebounce|number|<p>The maximum amount of time the scroll event does not fire for the finishScroll event to be triggered. (default: 100) </p>|
|preventDefault|boolean|<p>Whether to prevent being selected. (default: true) </p>|
|preventClickOnDrag|boolean|<p>Whether to prevent click event when dragging. (default: false) </p>|
|autoInit|boolean|<p>Whether to automatically initialize when an instance is created. If set to false, initialization is possible while calling the init method. (default: true) </p>|

